Opened 13 years ago

Closed 13 years ago

#2556 closed defect (fixed)

Broken PNG decode

Reported by: Clément Bœsch Owned by:
Priority: normal Component: avfilter
Version: git-master Keywords: png
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description (last modified by Clément Bœsch)

% ./ffmpeg -f lavfi -i testsrc=s=800x600 -vf 'movie=/tmp/Stopwatch-256.png[watermark];[in][watermark]overlay=10:10 [out]' -f null -
ffmpeg version N-52955-g8749649 Copyright (c) 2000-2013 the FFmpeg developers
  built on May 10 2013 18:56:27 with gcc 4.8.0 (GCC) 20130502 (prerelease)
  configuration: --enable-gpl --enable-version3 --enable-fontconfig --enable-libfreetype --enable-libmp3lame --enable-libvorbis --enable-libxvid --enable-libx264 --enable-libvpx --enable-libtheora --enable-x11grab --enable-libopenjpeg --enable-libass --enable-libmodplug --enable-libv4l2 --cc=colorgcc --samples=/home/ubitux/fate-samples --prefix=/tmp/ffinstall --disable-runtime-cpudetect --enable-libcelt --enable-libopencv --enable-frei0r --enable-libcaca --enable-libiec61883 --enable-libopencore-amrwb --enable-libopencore-amrnb --enable-libopus --enable-libpulse --enable-libspeex --enable-libquvi --enable-memory-poisoning
  libavutil      52. 30.100 / 52. 30.100
  libavcodec     55.  7.100 / 55.  7.100
  libavformat    55.  4.101 / 55.  4.101
  libavdevice    55.  0.100 / 55.  0.100
  libavfilter     3. 63.101 /  3. 63.101
  libswscale      2.  3.100 /  2.  3.100
  libswresample   0. 17.102 /  0. 17.102
  libpostproc    52.  3.100 / 52.  3.100
Input #0, lavfi, from 'testsrc=s=800x600':
  Duration: N/A, start: 0.000000, bitrate: N/A
    Stream #0:0: Video: rawvideo (RGB[24] / 0x18424752), rgb24, 800x600 [SAR 1:1 DAR 4:3], 25 tbr, 25 tbn, 25 tbc
Output #0, null, to 'pipe:':
  Metadata:
    encoder         : Lavf55.4.101
    Stream #0:0: Video: rawvideo (Y4[11][8] / 0x80B3459), yuva420p, 800x600 [SAR 1:1 DAR 4:3], q=2-31, 200 kb/s, 90k tbn, 25 tbc
Stream mapping:
  Stream #0:0 -> #0:0 (rawvideo -> rawvideo)
Press [q] to stop, [?] for help
[png @ 0x2b7e6c0] Missing png signature
[Parsed_movie_0 @ 0x2b7f3c0] Decode error: Operation not permitted
[png @ 0x2b7e6c0] Missing png signature
[Parsed_movie_0 @ 0x2b7f3c0] Decode error: Operation not permitted
[png @ 0x2b7e6c0] Missing png signature
[Parsed_movie_0 @ 0x2b7f3c0] Decode error: Operation not permitted
[png @ 0x2b7e6c0] Missing png signature
[Parsed_movie_0 @ 0x2b7f3c0] Decode error: Operation not permitted
[png @ 0x2b7e6c0] Missing png signature
[Parsed_movie_0 @ 0x2b7f3c0] Decode error: Operation not permitted
[png @ 0x2b7e6c0] Missing png signature
[Parsed_movie_0 @ 0x2b7f3c0] Decode error: Operation not permitted
[png @ 0x2b7e6c0] Missing png signature
[Parsed_movie_0 @ 0x2b7f3c0] Decode error: Operation not permitted
[png @ 0x2b7e6c0] Missing png signature
[Parsed_movie_0 @ 0x2b7f3c0] Decode error: Operation not permitted
[png @ 0x2b7e6c0] Missing png signature
[Parsed_movie_0 @ 0x2b7f3c0] Decode error: Operation not permitted

[...]

Works fine if converting that PNG to GIF first.

Attachments (1)

Stopwatch-256.png (4.9 KB ) - added by Clément Bœsch 13 years ago.

Download all attachments as: .zip

Change History (7)

by Clément Bœsch, 13 years ago

Attachment: Stopwatch-256.png added

comment:1 by Clément Bœsch, 13 years ago

Description: modified (diff)

comment:2 by Carl Eugen Hoyos, 13 years ago

Is it reproducible if you reencode to png (or tga)?

in reply to:  2 comment:3 by Clément Bœsch, 13 years ago

Replying to cehoyos:

Is it reproducible if you reencode to png (or tga)?

Re-encoding to PNG or TGA avoids the issue, but the transparency is broken (contrary to GIF).

comment:4 by Carl Eugen Hoyos, 13 years ago

Isn't this a duplicate of ticket #2158?

in reply to:  4 comment:5 by Clément Bœsch, 13 years ago

Replying to cehoyos:

Isn't this a duplicate of ticket #2158?

Possibly related, but the decode error is not identical so there are maybe several issues here.

comment:6 by Carl Eugen Hoyos, 13 years ago

Component: undeterminedavfilter
Reproduced by developer: set
Resolution: fixed
Status: newclosed
Version: unspecifiedgit-master

Michael has fixed the avfilter-related problem in ee97982 (and some earlier commits), the remaining problem is a duplicate of ticket #2158 afaict.

Note: See TracTickets for help on using tickets.